--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -11,5 +11,10 @@ page-home {
             padding: 10px 0 0 10px !important;
             margin: 0;
         }        
-    }    
+    }
+    .toolb {
+        div {
+            background-color: white;
+        }
+    }
 }
