--- a/src/pages/sales-historic/sales-historic.scss
+++ b/src/pages/sales-historic/sales-historic.scss
@@ -1,3 +1,73 @@
 page-sales-historic {
+    .my-table-container {
+        display: flex;
+        flex-direction: column;
+        max-height: 500px;
+        min-width: 300px;
+    }
+      
+    .mat-table {
+        overflow: auto;
+        max-height: 500px;
+    }
 
+    .mat-header-row, .mat-row {
+        border-bottom: 1px solid #ccc;
+    }
+
+    .mat-header-cell {
+        font-weight: bold;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    /* Structure */
+/* .my-table-container {
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    min-width: 300px;
+    position: relative;
+  }
+  
+  .mat-header {
+    min-height: 64px;
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+    font-size: 20px;
+  }
+  
+  .mat-table {
+    overflow: auto;
+    min-height: 300px;
+  }
+  
+  .mat-loading-shade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 56px;
+    right: 0;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .mat-rate-limit-reached {
+    color: #980000;
+    max-width: 360px;
+    text-align: center;
+  } */
+  
+  /* Column Widths */
+  .mat-column-paid,
+  .mat-column-id {
+    max-width: 64px;
+  }
+  
+/*   .mat-column-createdAt {
+    max-width: 124px;
+  } */
 }
