Search page only in HomeTab

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-split-pane when="xs">
+<!-- <ion-split-pane when="xs"> -->
     <!--  our side menu  -->
     <!-- <ion-menu [content]="content">
         <ion-header>
@@ -17,9 +17,11 @@
 
     </ion-menu> -->
 
+    <ion-nav [root]="rootPage"></ion-nav>
+
     <!-- the search content -->
-    <ion-nav [root]="leftPage"></ion-nav>
+    <!-- <ion-nav [root]="leftPage"></ion-nav> -->
 
     <!-- the main content -->
-    <ion-nav [root]="rightPage" main></ion-nav>
-</ion-split-pane>
+    <!-- <ion-nav [root]="rightPage" main></ion-nav> -->
+<!-- </ion-split-pane> -->
