Fix margin at the bottom of search page

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,3 +1,6 @@
 page-search {
-
+    /* Fixes the padding at the bottom of the content for a tab */
+    .content .fixed-content, .content .scroll-content{
+        margin-bottom: 0px !important;
+    }
 }
