Fix margin at the bottom of HomeMain page

--- a/src/pages/home-main/home-main.scss
+++ b/src/pages/home-main/home-main.scss
@@ -1,4 +1,9 @@
 page-home-main {
+    /* Fixes the padding at the bottom of the content for a tab */
+    .content .fixed-content, .content .scroll-content{
+        margin-bottom: 0px !important;
+    }
+
     $background-color:  #fea;
     .grid-basic-page {        
         ion-col div {
