--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,5 +1,5 @@
 page-search {
-    /* Fixes the padding at the bottom of the content for a tab */
+    /* Fix the margin at the bottom of the content for a tab */
     .content .fixed-content, .content .scroll-content{
         margin-bottom: 0px !important;
     }
