--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,8 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  /* primary:    #488aff, */
+  primary:    #4f8cef,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
