--- a/src/pages/debts/debts.scss
+++ b/src/pages/debts/debts.scss
@@ -1,3 +1,7 @@
 page-debts {
+    /* Fix the margin at the bottom of the content for a tab */
+   /*  .content .fixed-content, .content .scroll-content{
+        margin-bottom: 0px !important;
+    } */
 
 }
