--- a/src/pages/debts-master/debts-master.scss
+++ b/src/pages/debts-master/debts-master.scss
@@ -1,6 +1,7 @@
-page-debts-detail {
+page-debts-master {
     /* Fix the margin at the bottom of the content for a tab */
     .content .fixed-content, .content .scroll-content{
         margin-bottom: 0px !important;
     }
+
 }
