DebtsMaster selected style

--- a/src/pages/debts-master/debts-master.scss
+++ b/src/pages/debts-master/debts-master.scss
@@ -4,4 +4,12 @@ page-debts-master {
         margin-bottom: 0px !important;
     }
 
+    button.selected {
+        background-color: #f4f4f4 !important;
+    }
+
+    /* button:hover {
+        background-color: #f4f4f4 !important;
+    } */
+
 }
