--- a/src/pages/debts-master/debts-master.scss
+++ b/src/pages/debts-master/debts-master.scss
@@ -6,6 +6,11 @@ page-debts-master {
 
     button.selected {
         background-color: #f4f4f4 !important;
+
+        ion-label {
+            border-left: 2px solid #4f8cef;
+            padding-left: 10px;
+        }
     }
 
     /* button:hover {
