--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -27,7 +27,8 @@ $background-color:  #fff;
 $colors: (
   /* primary:    #488aff, */
   primary:    #4f8cef,
-  secondary:  #32db64,
+  secondary:  #efb24f,
+  success:    #85bb65,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
