--- a/src/pages/stock/stock.scss
+++ b/src/pages/stock/stock.scss
@@ -1,3 +1,14 @@
 page-stock {
+    .button-col button {
+        margin-top: 0px !important;
+    }
+
+    ion-col.badge-col{
+        text-align: center;
+
+        ion-badge {
+            font-size: 1.4rem !important;
+        }
+    }    
 
 }
